# taglib

./: .gitignore  .gitmodules  LICENSE  NOTICE.txt  README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  jitpack.yml  local.properties  settings.gradle.kts
.github/workflows/: build-taglib-aar.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/kotlin/: Tests.kt
src/main/cpp/: CMakeLists.txt  fileref_ext.cpp  fileref_ext.h  taglib.cpp  taglib_ext.cpp  taglib_ext.h  utils.h
src/main/java/com/kyant/taglib/: AudioProperties.kt  AudioPropertiesReadStyle.kt  Constants.kt  Metadata.kt  Picture.kt  PropertyMap.kt  TagLib.kt  TagLibException.kt
